# fg

./: LICENSE  README  README.md  copy_entities.sh  copy_items.sh  copy_maps.sh  dbreset.sh  runall.sh
fgauth/: auth.cfg  auth_server.gd  auth_server.gd.uid  export_presets.cfg  game_db_client.gd  game_db_client.gd.uid  icon.svg.import  main.tscn  project.godot  serverutils.gdextension  serverutils.gdextension.uid
fgclient/: client.gdextension  client.gdextension.uid  default_gateway.cfg  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  ticker.gd  ticker.gd.uid
fgdatabase/: .gitignore  db.cfg  db_server.gd  db_server.gd.uid  export_presets.cfg  gateway_db_server.gd  gateway_db_server.gd.uid  icon.svg.import  main.gd.uid  main.tscn  project.godot  serverutils.gdextension.uid
fggateway/: auth_server.gd  auth_server.gd.uid  export_presets.cfg  gateway.cfg  gateway_db_server.gd  gateway_db_server.gd.uid  gateway_server.gd  gateway_server.gd.uid  icon.svg.import  main.tscn  project.godot  server_list.gd  server_list.gd.uid  serverutils.gdextension.uid
fgmapeditor/: .gitignore  generate_tls.gd  generate_tls.gd.uid  icon.svg.import  main.tscn  project.godot  server.gdextension  server.gdextension.uid
fgrust/: Cargo.toml  build.sh  copy_over.sh
fgrust/rgdext_shared/: Cargo.toml
fgrust/rgdext_shared/src/: basemap.rs  filedb.rs  genericevent.rs  lib.rs  playerdata.rs  serverconnector.rs
fgrust/rgdext_shared/src/basemap/: mod.rs  spatialhash.rs
fgrust/rgdext_shared/src/playerdata/: item.rs  mod.rs  playercontainer.rs  skills.rs
(+259 files in other folders)
