[package]
name = "rgdext_shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"] # Just a Rust library, to be imported by binaries

[dependencies]
godot = {workspace = true}
# serde = {version = "1.0.219", features = ["derive"]}
bitcode = {version = "0.6.6"} #, features = ["serde"]

[features]
default = []
client = []
server = []
serverutil = []
